<resources>
    <string name="app_name">Переводчик</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_favorites">Избранное</string>
    <string name="text_translator">Переводчик</string>
    <string name="text_history">История</string>
    <string name="text_settings">Настройки</string>
    <string name="edit_text_translate">Введите текст</string>
    <string name="delete_all">Удалить все</string>
    <string name="delete_all_message_in_history">Вы уверены, что хотите отчистить историю?</string>
    <string name="delete_all_message_in_favorites">Вы уверены, что хотите отчистить избранное?</string>
    <string name="yes">Да</string>
    <string name="no">Отмена</string>
    <string name="find_in_history">Найти в истории</string>
    <string name="find_in_favorites">Найти в избранном</string>
    <string name="text_delete">Удаление</string>
    <string name="delete_chosen_item">Удалить выбранный перевод?</string>



    <string name="yandex_translate_http">https://translate.yandex.net/api/v1.5/tr.json/</string>
    <string name="yandex_dictionary_http">https://dictionary.yandex.net/api/v1/dicservice.json/</string>
    <string name="api_translate">translate</string>
    <string name="api_detect">detect</string>
    <string name="api_get_langs">getLangs</string>
    <string name="api_lookup">lookup</string>

    <string name="yandex_translate_api_key">trnsl.1.1.20170318T153333Z.9e2a34d3abd9dd27.396aec68f7a23e0ab030865f817666cce3ae2cdb</string>
    <string name="yandex_dictionary_api_key">dict.1.1.20170406T125559Z.12e2e70a589a9cd5.ce2456edd85f5584a5bc7a78f2c05efabaa013f7</string>
    <string name="par_key">key</string>
    <string name="par_text">text</string>
    <string name="par_lang">lang</string>
    <string name="par_langs">langs</string>
    <string name="par_format">format</string>
    <string name="par_options">options</string>
    <string name="language_text">Язык текста</string>
    <string name="par_ui">ui</string>
    <string name="language_translation">Язык перевода</string>
    <string name="translate_with_yandex">Переведено с помощью сервисов «Яндекс.Переводчик» и «Яндекс.Словарь»</string>
    <string name="yandex">Яндекс</string>
    <string name="par_hint">hint</string>
    <string name="ok">ОК</string>
    <string name="no_connection">Отсутствует соединение с Интернетом. Проверьте подключение и повторите попытку снова</string>
    <string name="no_connection_title">Нет соединения</string>
    <string name="par_code">code</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="error_tracker_empty_json">Пустой JSON-ответ</string>
    <string name="error">Ошибка</string>
    <string name="par_message">message</string>
    <string name="error_tracker_timeout_error">Превышено время ожидания ответа. Повторите действие позже</string>
    <string name="no_translations_in_favorites">Нет переводов в избранном</string>
    <string name="no_translations_in_history">Нет переводов в истории</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="clear">Очистить</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="check_internet_connection_and_try_again">Проверьте подключение к Интернету\nи повторите попытку</string>
    <string name="try_again_later">Повторите попытку позже</string>
    <string name="try_again">Повторить</string>
    <string name="browser">Браузер</string>
    <string name="too_long_text">Текст слишком длинный. Будут переведены первые 2000 знаков</string>
    <string name="par_def">def</string>
    <string name="par_pos">pos</string>
    <string name="par_num">num</string>
    <string name="par_gen">gen</string>
    <string name="par_tr">tr</string>
    <string name="par_syn">syn</string>
    <string name="par_mean">mean</string>
    <string name="par_ex">ex</string>
    <string name="par_anm">anm</string>
    <string name="par_ts">ts</string>
</resources>
